compilateur/y.output
Terminaux inutilisés dans la grammaire

   tERROR


État 49 conflits: 6 décalage/réduction
État 69 conflits: 6 décalage/réduction
État 71 conflits: 6 décalage/réduction
État 72 conflits: 6 décalage/réduction
État 73 conflits: 6 décalage/réduction
État 81 conflits: 5 décalage/réduction
État 82 conflits: 5 décalage/réduction
État 83 conflits: 5 décalage/réduction
État 84 conflits: 5 décalage/réduction


Grammaire

    0 $accept: start $end

    1 start: tMAIN tPO tPF tACCO instructions tACCF

    2 instructions: instruction instructions
    3             | %empty

    4 instruction: definitions tEND

    5 $@1: %empty

    6 $@2: %empty

    7 instruction: tVAR $@1 affectation $@2 tEND
    8            | print tEND

    9 $@3: %empty

   10 $@4: %empty

   11 instruction: tIF tPO condition $@3 tPF tACCO $@4 instructions tACCF

   12 $@5: %empty

   13 $@6: %empty

   14 $@7: %empty

   15 instruction: tWHILE tPO $@5 condition $@6 tPF tACCO $@7 instructions tACCF

   16 condition: tVAR
   17          | tINT
   18          | tPE condition
   19          | tPO condition tPF
   20          | condition tEQ tEQ condition
   21          | condition tPE tEQ condition
   22          | condition tCO tEQ condition
   23          | condition tCF tEQ condition
   24          | condition tCO condition
   25          | condition tCF condition
   26          | condition tAND condition
   27          | condition tOR condition

   28 definitions: types noms

   29 affectation: tEQ operation

   30 noms: nom
   31     | nom tCOM noms

   32 nom: tVAR
   33    | tVAR affectation

   34 types: tCONST type
   35      | type

   36 type: tTYPEINT

   37 operation: tINT
   38          | tVAR
   39          | operation tADD operation
   40          | operation tSUB operation
   41          | operation tMUL operation
   42          | operation tDIV operation
   43          | tPO operation tPF

   44 print: tPRINTF tPO tVAR tPF


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tMAIN (258) 1
tACCO (259) 1 11 15
tACCF (260) 1 11 15
tPRINTF (261) 44
tVAR (262) 7 16 32 33 38 44
tCONST (263) 34
tTYPEINT (264) 36
tINT (265) 17 37
tADD (266) 39
tSUB (267) 40
tMUL (268) 41
tDIV (269) 42
tEQ (270) 20 21 22 23 29
tPO (271) 1 11 15 19 43 44
tPF (272) 1 11 15 19 43 44
tCOM (273) 31
tEND (274) 4 7 8
tERROR (275)
tIF (276) 11
tWHILE (277) 15
tPE (278) 18 21
tCO (279) 22 24
tCF (280) 23 25
tAND (281) 26
tOR (282) 27


Non-terminaux, suivis des règles où ils apparaissent

$accept (28)
    à gauche: 0
start (29)
    à gauche: 1, à droite: 0
instructions (30)
    à gauche: 2 3, à droite: 1 2 11 15
instruction (31)
    à gauche: 4 7 8 11 15, à droite: 2
$@1 (32)
    à gauche: 5, à droite: 7
$@2 (33)
    à gauche: 6, à droite: 7
$@3 (34)
    à gauche: 9, à droite: 11
$@4 (35)
    à gauche: 10, à droite: 11
$@5 (36)
    à gauche: 12, à droite: 15
$@6 (37)
    à gauche: 13, à droite: 15
$@7 (38)
    à gauche: 14, à droite: 15
condition (39)
    à gauche: 16 17 18 19 20 21 22 23 24 25 26 27, à droite: 11 15
    18 19 20 21 22 23 24 25 26 27
definitions (40)
    à gauche: 28, à droite: 4
affectation (41)
    à gauche: 29, à droite: 7 33
noms (42)
    à gauche: 30 31, à droite: 28 31
nom (43)
    à gauche: 32 33, à droite: 30 31
types (44)
    à gauche: 34 35, à droite: 28
type (45)
    à gauche: 36, à droite: 34 35
operation (46)
    à gauche: 37 38 39 40 41 42 43, à droite: 29 39 40 41 42 43
print (47)
    à gauche: 44, à droite: 8


État 0

    0 $accept: . start $end

    tMAIN  décalage et aller à l'état 1

    start  aller à l'état 2


État 1

    1 start: tMAIN . tPO tPF tACCO instructions tACCF

    tPO  décalage et aller à l'état 3


État 2

    0 $accept: start . $end

    $end  décalage et aller à l'état 4


État 3

    1 start: tMAIN tPO . tPF tACCO instructions tACCF

    tPF  décalage et aller à l'état 5


État 4

    0 $accept: start $end .

    $défaut  accepter


État 5

    1 start: tMAIN tPO tPF . tACCO instructions tACCF

    tACCO  décalage et aller à l'état 6


État 6

    1 start: tMAIN tPO tPF tACCO . instructions tACCF

    tPRINTF   décalage et aller à l'état 7
    tVAR      décalage et aller à l'état 8
    tCONST    décalage et aller à l'état 9
    tTYPEINT  décalage et aller à l'état 10
    tIF       décalage et aller à l'état 11
    tWHILE    décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 3 (instructions)

    instructions  aller à l'état 13
    instruction   aller à l'état 14
    definitions   aller à l'état 15
    types         aller à l'état 16
    type          aller à l'état 17
    print         aller à l'état 18


État 7

   44 print: tPRINTF . tPO tVAR tPF

    tPO  décalage et aller à l'état 19


État 8

    7 instruction: tVAR . $@1 affectation $@2 tEND

    $défaut  réduction par utilisation de la règle 5 ($@1)

    $@1  aller à l'état 20


État 9

   34 types: tCONST . type

    tTYPEINT  décalage et aller à l'état 10

    type  aller à l'état 21


État 10

   36 type: tTYPEINT .

    $défaut  réduction par utilisation de la règle 36 (type)


État 11

   11 instruction: tIF . tPO condition $@3 tPF tACCO $@4 instructions tACCF

    tPO  décalage et aller à l'état 22


État 12

   15 instruction: tWHILE . tPO $@5 condition $@6 tPF tACCO $@7 instructions tACCF

    tPO  décalage et aller à l'état 23


État 13

    1 start: tMAIN tPO tPF tACCO instructions . tACCF

    tACCF  décalage et aller à l'état 24


État 14

    2 instructions: instruction . instructions

    tPRINTF   décalage et aller à l'état 7
    tVAR      décalage et aller à l'état 8
    tCONST    décalage et aller à l'état 9
    tTYPEINT  décalage et aller à l'état 10
    tIF       décalage et aller à l'état 11
    tWHILE    décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 3 (instructions)

    instructions  aller à l'état 25
    instruction   aller à l'état 14
    definitions   aller à l'état 15
    types         aller à l'état 16
    type          aller à l'état 17
    print         aller à l'état 18


État 15

    4 instruction: definitions . tEND

    tEND  décalage et aller à l'état 26


État 16

   28 definitions: types . noms

    tVAR  décalage et aller à l'état 27

    noms  aller à l'état 28
    nom   aller à l'état 29


État 17

   35 types: type .

    $défaut  réduction par utilisation de la règle 35 (types)


État 18

    8 instruction: print . tEND

    tEND  décalage et aller à l'état 30


État 19

   44 print: tPRINTF tPO . tVAR tPF

    tVAR  décalage et aller à l'état 31


État 20

    7 instruction: tVAR $@1 . affectation $@2 tEND

    tEQ  décalage et aller à l'état 32

    affectation  aller à l'état 33


État 21

   34 types: tCONST type .

    $défaut  réduction par utilisation de la règle 34 (types)


État 22

   11 instruction: tIF tPO . condition $@3 tPF tACCO $@4 instructions tACCF

    tVAR  décalage et aller à l'état 34
    tINT  décalage et aller à l'état 35
    tPO   décalage et aller à l'état 36
    tPE   décalage et aller à l'état 37

    condition  aller à l'état 38


État 23

   15 instruction: tWHILE tPO . $@5 condition $@6 tPF tACCO $@7 instructions tACCF

    $défaut  réduction par utilisation de la règle 12 ($@5)

    $@5  aller à l'état 39


État 24

    1 start: tMAIN tPO tPF tACCO instructions tACCF .

    $défaut  réduction par utilisation de la règle 1 (start)


État 25

    2 instructions: instruction instructions .

    $défaut  réduction par utilisation de la règle 2 (instructions)


État 26

    4 instruction: definitions tEND .

    $défaut  réduction par utilisation de la règle 4 (instruction)


État 27

   32 nom: tVAR .
   33    | tVAR . affectation

    tEQ  décalage et aller à l'état 32

    $défaut  réduction par utilisation de la règle 32 (nom)

    affectation  aller à l'état 40


État 28

   28 definitions: types noms .

    $défaut  réduction par utilisation de la règle 28 (definitions)


État 29

   30 noms: nom .
   31     | nom . tCOM noms

    tCOM  décalage et aller à l'état 41

    $défaut  réduction par utilisation de la règle 30 (noms)


État 30

    8 instruction: print tEND .

    $défaut  réduction par utilisation de la règle 8 (instruction)


État 31

   44 print: tPRINTF tPO tVAR . tPF

    tPF  décalage et aller à l'état 42


État 32

   29 affectation: tEQ . operation

    tVAR  décalage et aller à l'état 43
    tINT  décalage et aller à l'état 44
    tPO   décalage et aller à l'état 45

    operation  aller à l'état 46


État 33

    7 instruction: tVAR $@1 affectation . $@2 tEND

    $défaut  réduction par utilisation de la règle 6 ($@2)

    $@2  aller à l'état 47


État 34

   16 condition: tVAR .

    $défaut  réduction par utilisation de la règle 16 (condition)


État 35

   17 condition: tINT .

    $défaut  réduction par utilisation de la règle 17 (condition)


État 36

   19 condition: tPO . condition tPF

    tVAR  décalage et aller à l'état 34
    tINT  décalage et aller à l'état 35
    tPO   décalage et aller à l'état 36
    tPE   décalage et aller à l'état 37

    condition  aller à l'état 48


État 37

   18 condition: tPE . condition

    tVAR  décalage et aller à l'état 34
    tINT  décalage et aller à l'état 35
    tPO   décalage et aller à l'état 36
    tPE   décalage et aller à l'état 37

    condition  aller à l'état 49


État 38

   11 instruction: tIF tPO condition . $@3 tPF tACCO $@4 instructions tACCF
   20 condition: condition . tEQ tEQ condition
   21          | condition . tPE tEQ condition
   22          | condition . tCO tEQ condition
   23          | condition . tCF tEQ condition
   24          | condition . tCO condition
   25          | condition . tCF condition
   26          | condition . tAND condition
   27          | condition . tOR condition

    tEQ   décalage et aller à l'état 50
    tPE   décalage et aller à l'état 51
    tCO   décalage et aller à l'état 52
    tCF   décalage et aller à l'état 53
    tAND  décalage et aller à l'état 54
    tOR   décalage et aller à l'état 55

    $défaut  réduction par utilisation de la règle 9 ($@3)

    $@3  aller à l'état 56


État 39

   15 instruction: tWHILE tPO $@5 . condition $@6 tPF tACCO $@7 instructions tACCF

    tVAR  décalage et aller à l'état 34
    tINT  décalage et aller à l'état 35
    tPO   décalage et aller à l'état 36
    tPE   décalage et aller à l'état 37

    condition  aller à l'état 57


État 40

   33 nom: tVAR affectation .

    $défaut  réduction par utilisation de la règle 33 (nom)


État 41

   31 noms: nom tCOM . noms

    tVAR  décalage et aller à l'état 27

    noms  aller à l'état 58
    nom   aller à l'état 29


État 42

   44 print: tPRINTF tPO tVAR tPF .

    $défaut  réduction par utilisation de la règle 44 (print)


État 43

   38 operation: tVAR .

    $défaut  réduction par utilisation de la règle 38 (operation)


État 44

   37 operation: tINT .

    $défaut  réduction par utilisation de la règle 37 (operation)


État 45

   43 operation: tPO . operation tPF

    tVAR  décalage et aller à l'état 43
    tINT  décalage et aller à l'état 44
    tPO   décalage et aller à l'état 45

    operation  aller à l'état 59


État 46

   29 affectation: tEQ operation .
   39 operation: operation . tADD operation
   40          | operation . tSUB operation
   41          | operation . tMUL operation
   42          | operation . tDIV operation

    tADD  décalage et aller à l'état 60
    tSUB  décalage et aller à l'état 61
    tMUL  décalage et aller à l'état 62
    tDIV  décalage et aller à l'état 63

    $défaut  réduction par utilisation de la règle 29 (affectation)


État 47

    7 instruction: tVAR $@1 affectation $@2 . tEND

    tEND  décalage et aller à l'état 64


État 48

   19 condition: tPO condition . tPF
   20          | condition . tEQ tEQ condition
   21          | condition . tPE tEQ condition
   22          | condition . tCO tEQ condition
   23          | condition . tCF tEQ condition
   24          | condition . tCO condition
   25          | condition . tCF condition
   26          | condition . tAND condition
   27          | condition . tOR condition

    tEQ   décalage et aller à l'état 50
    tPF   décalage et aller à l'état 65
    tPE   décalage et aller à l'état 51
    tCO   décalage et aller à l'état 52
    tCF   décalage et aller à l'état 53
    tAND  décalage et aller à l'état 54
    tOR   décalage et aller à l'état 55


État 49

   18 condition: tPE condition .
   20          | condition . tEQ tEQ condition
   21          | condition . tPE tEQ condition
   22          | condition . tCO tEQ condition
   23          | condition . tCF tEQ condition
   24          | condition . tCO condition
   25          | condition . tCF condition
   26          | condition . tAND condition
   27          | condition . tOR condition

    tEQ   décalage et aller à l'état 50
    tPE   décalage et aller à l'état 51
    tCO   décalage et aller à l'état 52
    tCF   décalage et aller à l'état 53
    tAND  décalage et aller à l'état 54
    tOR   décalage et aller à l'état 55

    tEQ       [réduction par utilisation de la règle 18 (condition)]
    tPE       [réduction par utilisation de la règle 18 (condition)]
    tCO       [réduction par utilisation de la règle 18 (condition)]
    tCF       [réduction par utilisation de la règle 18 (condition)]
    tAND      [réduction par utilisation de la règle 18 (condition)]
    tOR       [réduction par utilisation de la règle 18 (condition)]
    $défaut  réduction par utilisation de la règle 18 (condition)


État 50

   20 condition: condition tEQ . tEQ condition

    tEQ  décalage et aller à l'état 66


État 51

   21 condition: condition tPE . tEQ condition

    tEQ  décalage et aller à l'état 67


État 52

   22 condition: condition tCO . tEQ condition
   24          | condition tCO . condition

    tVAR  décalage et aller à l'état 34
    tINT  décalage et aller à l'état 35
    tEQ   décalage et aller à l'état 68
    tPO   décalage et aller à l'état 36
    tPE   décalage et aller à l'état 37

    condition  aller à l'état 69


État 53

   23 condition: condition tCF . tEQ condition
   25          | condition tCF . condition

    tVAR  décalage et aller à l'état 34
    tINT  décalage et aller à l'état 35
    tEQ   décalage et aller à l'état 70
    tPO   décalage et aller à l'état 36
    tPE   décalage et aller à l'état 37

    condition  aller à l'état 71


État 54

   26 condition: condition tAND . condition

    tVAR  décalage et aller à l'état 34
    tINT  décalage et aller à l'état 35
    tPO   décalage et aller à l'état 36
    tPE   décalage et aller à l'état 37

    condition  aller à l'état 72


État 55

   27 condition: condition tOR . condition

    tVAR  décalage et aller à l'état 34
    tINT  décalage et aller à l'état 35
    tPO   décalage et aller à l'état 36
    tPE   décalage et aller à l'état 37

    condition  aller à l'état 73


État 56

   11 instruction: tIF tPO condition $@3 . tPF tACCO $@4 instructions tACCF

    tPF  décalage et aller à l'état 74


État 57

   15 instruction: tWHILE tPO $@5 condition . $@6 tPF tACCO $@7 instructions tACCF
   20 condition: condition . tEQ tEQ condition
   21          | condition . tPE tEQ condition
   22          | condition . tCO tEQ condition
   23          | condition . tCF tEQ condition
   24          | condition . tCO condition
   25          | condition . tCF condition
   26          | condition . tAND condition
   27          | condition . tOR condition

    tEQ   décalage et aller à l'état 50
    tPE   décalage et aller à l'état 51
    tCO   décalage et aller à l'état 52
    tCF   décalage et aller à l'état 53
    tAND  décalage et aller à l'état 54
    tOR   décalage et aller à l'état 55

    $défaut  réduction par utilisation de la règle 13 ($@6)

    $@6  aller à l'état 75


État 58

   31 noms: nom tCOM noms .

    $défaut  réduction par utilisation de la règle 31 (noms)


État 59

   39 operation: operation . tADD operation
   40          | operation . tSUB operation
   41          | operation . tMUL operation
   42          | operation . tDIV operation
   43          | tPO operation . tPF

    tADD  décalage et aller à l'état 60
    tSUB  décalage et aller à l'état 61
    tMUL  décalage et aller à l'état 62
    tDIV  décalage et aller à l'état 63
    tPF   décalage et aller à l'état 76


État 60

   39 operation: operation tADD . operation

    tVAR  décalage et aller à l'état 43
    tINT  décalage et aller à l'état 44
    tPO   décalage et aller à l'état 45

    operation  aller à l'état 77


État 61

   40 operation: operation tSUB . operation

    tVAR  décalage et aller à l'état 43
    tINT  décalage et aller à l'état 44
    tPO   décalage et aller à l'état 45

    operation  aller à l'état 78


État 62

   41 operation: operation tMUL . operation

    tVAR  décalage et aller à l'état 43
    tINT  décalage et aller à l'état 44
    tPO   décalage et aller à l'état 45

    operation  aller à l'état 79


État 63

   42 operation: operation tDIV . operation

    tVAR  décalage et aller à l'état 43
    tINT  décalage et aller à l'état 44
    tPO   décalage et aller à l'état 45

    operation  aller à l'état 80


État 64

    7 instruction: tVAR $@1 affectation $@2 tEND .

    $défaut  réduction par utilisation de la règle 7 (instruction)


État 65

   19 condition: tPO condition tPF .

    $défaut  réduction par utilisation de la règle 19 (condition)


État 66

   20 condition: condition tEQ tEQ . condition

    tVAR  décalage et aller à l'état 34
    tINT  décalage et aller à l'état 35
    tPO   décalage et aller à l'état 36
    tPE   décalage et aller à l'état 37

    condition  aller à l'état 81


État 67

   21 condition: condition tPE tEQ . condition

    tVAR  décalage et aller à l'état 34
    tINT  décalage et aller à l'état 35
    tPO   décalage et aller à l'état 36
    tPE   décalage et aller à l'état 37

    condition  aller à l'état 82


État 68

   22 condition: condition tCO tEQ . condition

    tVAR  décalage et aller à l'état 34
    tINT  décalage et aller à l'état 35
    tPO   décalage et aller à l'état 36
    tPE   décalage et aller à l'état 37

    condition  aller à l'état 83


État 69

   20 condition: condition . tEQ tEQ condition
   21          | condition . tPE tEQ condition
   22          | condition . tCO tEQ condition
   23          | condition . tCF tEQ condition
   24          | condition . tCO condition
   24          | condition tCO condition .
   25          | condition . tCF condition
   26          | condition . tAND condition
   27          | condition . tOR condition

    tEQ   décalage et aller à l'état 50
    tPE   décalage et aller à l'état 51
    tCO   décalage et aller à l'état 52
    tCF   décalage et aller à l'état 53
    tAND  décalage et aller à l'état 54
    tOR   décalage et aller à l'état 55

    tEQ       [réduction par utilisation de la règle 24 (condition)]
    tPE       [réduction par utilisation de la règle 24 (condition)]
    tCO       [réduction par utilisation de la règle 24 (condition)]
    tCF       [réduction par utilisation de la règle 24 (condition)]
    tAND      [réduction par utilisation de la règle 24 (condition)]
    tOR       [réduction par utilisation de la règle 24 (condition)]
    $défaut  réduction par utilisation de la règle 24 (condition)


État 70

   23 condition: condition tCF tEQ . condition

    tVAR  décalage et aller à l'état 34
    tINT  décalage et aller à l'état 35
    tPO   décalage et aller à l'état 36
    tPE   décalage et aller à l'état 37

    condition  aller à l'état 84


État 71

   20 condition: condition . tEQ tEQ condition
   21          | condition . tPE tEQ condition
   22          | condition . tCO tEQ condition
   23          | condition . tCF tEQ condition
   24          | condition . tCO condition
   25          | condition . tCF condition
   25          | condition tCF condition .
   26          | condition . tAND condition
   27          | condition . tOR condition

    tEQ   décalage et aller à l'état 50
    tPE   décalage et aller à l'état 51
    tCO   décalage et aller à l'état 52
    tCF   décalage et aller à l'état 53
    tAND  décalage et aller à l'état 54
    tOR   décalage et aller à l'état 55

    tEQ       [réduction par utilisation de la règle 25 (condition)]
    tPE       [réduction par utilisation de la règle 25 (condition)]
    tCO       [réduction par utilisation de la règle 25 (condition)]
    tCF       [réduction par utilisation de la règle 25 (condition)]
    tAND      [réduction par utilisation de la règle 25 (condition)]
    tOR       [réduction par utilisation de la règle 25 (condition)]
    $défaut  réduction par utilisation de la règle 25 (condition)


État 72

   20 condition: condition . tEQ tEQ condition
   21          | condition . tPE tEQ condition
   22          | condition . tCO tEQ condition
   23          | condition . tCF tEQ condition
   24          | condition . tCO condition
   25          | condition . tCF condition
   26          | condition . tAND condition
   26          | condition tAND condition .
   27          | condition . tOR condition

    tEQ   décalage et aller à l'état 50
    tPE   décalage et aller à l'état 51
    tCO   décalage et aller à l'état 52
    tCF   décalage et aller à l'état 53
    tAND  décalage et aller à l'état 54
    tOR   décalage et aller à l'état 55

    tEQ       [réduction par utilisation de la règle 26 (condition)]
    tPE       [réduction par utilisation de la règle 26 (condition)]
    tCO       [réduction par utilisation de la règle 26 (condition)]
    tCF       [réduction par utilisation de la règle 26 (condition)]
    tAND      [réduction par utilisation de la règle 26 (condition)]
    tOR       [réduction par utilisation de la règle 26 (condition)]
    $défaut  réduction par utilisation de la règle 26 (condition)


État 73

   20 condition: condition . tEQ tEQ condition
   21          | condition . tPE tEQ condition
   22          | condition . tCO tEQ condition
   23          | condition . tCF tEQ condition
   24          | condition . tCO condition
   25          | condition . tCF condition
   26          | condition . tAND condition
   27          | condition . tOR condition
   27          | condition tOR condition .

    tEQ   décalage et aller à l'état 50
    tPE   décalage et aller à l'état 51
    tCO   décalage et aller à l'état 52
    tCF   décalage et aller à l'état 53
    tAND  décalage et aller à l'état 54
    tOR   décalage et aller à l'état 55

    tEQ       [réduction par utilisation de la règle 27 (condition)]
    tPE       [réduction par utilisation de la règle 27 (condition)]
    tCO       [réduction par utilisation de la règle 27 (condition)]
    tCF       [réduction par utilisation de la règle 27 (condition)]
    tAND      [réduction par utilisation de la règle 27 (condition)]
    tOR       [réduction par utilisation de la règle 27 (condition)]
    $défaut  réduction par utilisation de la règle 27 (condition)


État 74

   11 instruction: tIF tPO condition $@3 tPF . tACCO $@4 instructions tACCF

    tACCO  décalage et aller à l'état 85


État 75

   15 instruction: tWHILE tPO $@5 condition $@6 . tPF tACCO $@7 instructions tACCF

    tPF  décalage et aller à l'état 86


État 76

   43 operation: tPO operation tPF .

    $défaut  réduction par utilisation de la règle 43 (operation)


État 77

   39 operation: operation . tADD operation
   39          | operation tADD operation .
   40          | operation . tSUB operation
   41          | operation . tMUL operation
   42          | operation . tDIV operation

    tMUL  décalage et aller à l'état 62
    tDIV  décalage et aller à l'état 63

    $défaut  réduction par utilisation de la règle 39 (operation)


État 78

   39 operation: operation . tADD operation
   40          | operation . tSUB operation
   40          | operation tSUB operation .
   41          | operation . tMUL operation
   42          | operation . tDIV operation

    tMUL  décalage et aller à l'état 62
    tDIV  décalage et aller à l'état 63

    $défaut  réduction par utilisation de la règle 40 (operation)


État 79

   39 operation: operation . tADD operation
   40          | operation . tSUB operation
   41          | operation . tMUL operation
   41          | operation tMUL operation .
   42          | operation . tDIV operation

    $défaut  réduction par utilisation de la règle 41 (operation)


État 80

   39 operation: operation . tADD operation
   40          | operation . tSUB operation
   41          | operation . tMUL operation
   42          | operation . tDIV operation
   42          | operation tDIV operation .

    $défaut  réduction par utilisation de la règle 42 (operation)


État 81

   20 condition: condition . tEQ tEQ condition
   20          | condition tEQ tEQ condition .
   21          | condition . tPE tEQ condition
   22          | condition . tCO tEQ condition
   23          | condition . tCF tEQ condition
   24          | condition . tCO condition
   25          | condition . tCF condition
   26          | condition . tAND condition
   27          | condition . tOR condition

    tEQ   décalage et aller à l'état 50
    tPE   décalage et aller à l'état 51
    tCO   décalage et aller à l'état 52
    tCF   décalage et aller à l'état 53
    tAND  décalage et aller à l'état 54
    tOR   décalage et aller à l'état 55

    tPE       [réduction par utilisation de la règle 20 (condition)]
    tCO       [réduction par utilisation de la règle 20 (condition)]
    tCF       [réduction par utilisation de la règle 20 (condition)]
    tAND      [réduction par utilisation de la règle 20 (condition)]
    tOR       [réduction par utilisation de la règle 20 (condition)]
    $défaut  réduction par utilisation de la règle 20 (condition)


État 82

   20 condition: condition . tEQ tEQ condition
   21          | condition . tPE tEQ condition
   21          | condition tPE tEQ condition .
   22          | condition . tCO tEQ condition
   23          | condition . tCF tEQ condition
   24          | condition . tCO condition
   25          | condition . tCF condition
   26          | condition . tAND condition
   27          | condition . tOR condition

    tEQ   décalage et aller à l'état 50
    tPE   décalage et aller à l'état 51
    tCO   décalage et aller à l'état 52
    tCF   décalage et aller à l'état 53
    tAND  décalage et aller à l'état 54
    tOR   décalage et aller à l'état 55

    tPE       [réduction par utilisation de la règle 21 (condition)]
    tCO       [réduction par utilisation de la règle 21 (condition)]
    tCF       [réduction par utilisation de la règle 21 (condition)]
    tAND      [réduction par utilisation de la règle 21 (condition)]
    tOR       [réduction par utilisation de la règle 21 (condition)]
    $défaut  réduction par utilisation de la règle 21 (condition)


État 83

   20 condition: condition . tEQ tEQ condition
   21          | condition . tPE tEQ condition
   22          | condition . tCO tEQ condition
   22          | condition tCO tEQ condition .
   23          | condition . tCF tEQ condition
   24          | condition . tCO condition
   25          | condition . tCF condition
   26          | condition . tAND condition
   27          | condition . tOR condition

    tEQ   décalage et aller à l'état 50
    tPE   décalage et aller à l'état 51
    tCO   décalage et aller à l'état 52
    tCF   décalage et aller à l'état 53
    tAND  décalage et aller à l'état 54
    tOR   décalage et aller à l'état 55

    tPE       [réduction par utilisation de la règle 22 (condition)]
    tCO       [réduction par utilisation de la règle 22 (condition)]
    tCF       [réduction par utilisation de la règle 22 (condition)]
    tAND      [réduction par utilisation de la règle 22 (condition)]
    tOR       [réduction par utilisation de la règle 22 (condition)]
    $défaut  réduction par utilisation de la règle 22 (condition)


État 84

   20 condition: condition . tEQ tEQ condition
   21          | condition . tPE tEQ condition
   22          | condition . tCO tEQ condition
   23          | condition . tCF tEQ condition
   23          | condition tCF tEQ condition .
   24          | condition . tCO condition
   25          | condition . tCF condition
   26          | condition . tAND condition
   27          | condition . tOR condition

    tEQ   décalage et aller à l'état 50
    tPE   décalage et aller à l'état 51
    tCO   décalage et aller à l'état 52
    tCF   décalage et aller à l'état 53
    tAND  décalage et aller à l'état 54
    tOR   décalage et aller à l'état 55

    tPE       [réduction par utilisation de la règle 23 (condition)]
    tCO       [réduction par utilisation de la règle 23 (condition)]
    tCF       [réduction par utilisation de la règle 23 (condition)]
    tAND      [réduction par utilisation de la règle 23 (condition)]
    tOR       [réduction par utilisation de la règle 23 (condition)]
    $défaut  réduction par utilisation de la règle 23 (condition)


État 85

   11 instruction: tIF tPO condition $@3 tPF tACCO . $@4 instructions tACCF

    $défaut  réduction par utilisation de la règle 10 ($@4)

    $@4  aller à l'état 87


État 86

   15 instruction: tWHILE tPO $@5 condition $@6 tPF . tACCO $@7 instructions tACCF

    tACCO  décalage et aller à l'état 88


État 87

   11 instruction: tIF tPO condition $@3 tPF tACCO $@4 . instructions tACCF
